Update Fraud Detection with Supervised Learning.ipynb

--- a/Fraud Detection with Supervised Learning.ipynb
+++ b/Fraud Detection with Supervised Learning.ipynb
@@ -1444,7 +1444,7 @@
     "### Undersampling and Oversampling\n",
     "Now there are two options to solve the imbalanced class problem, undersampling and oversampling. At first glance, undersampling by trimming down non-fraud data might be a \"wise\" choice since we have big surplus of non-fraud data. However, training on a fraud and non-fraud ratio of 50/50 can lead to bias, meaning the model likely will not perform well with unseen data. One of the reason being, with random undersampling when events are removed without any consideration for what they are, we risk of losing potentially important data.\n",
     "\n",
-    "In order to leverage as much data as possible, with no oberavations wasted, we will approach resolving the imbalance problem with oversampling - use SMOTE. A common mistake is SMOTEing before spliting into training and validation(test) datasets, this will lead to serious data leak - contaminate your testing data.\n",
+    "In order to leverage as much data as possible, with no observations wasted, we will approach resolving the imbalance problem with oversampling - use SMOTE. A common mistake is SMOTEing before spliting into training and validation(test) datasets, this will lead to serious data leak - contaminate your testing data.\n",
     "\n",
     "Pros and Cons of random undersampling and oversampling\n",
     "* Random undersampling\n",
