Update Fraud Detection with Supervised Learning.ipynb

--- a/Fraud Detection with Supervised Learning.ipynb
+++ b/Fraud Detection with Supervised Learning.ipynb
@@ -2636,7 +2636,7 @@
    "id": "d40a1899",
    "metadata": {},
    "source": [
-    "As scoring set to recall, the GridSearchCV provides the best setup:\n",
+    "set to recall, the GridSearchCV provides the best setup:\n",
     "\n",
     " 'randomforestclassifier__max_depth': 6,\n",
     " \n",
@@ -2838,7 +2838,7 @@
    "id": "4f0b0f57",
    "metadata": {},
    "source": [
-    "As scoring set to recall, the GridSearchCV provides the best setup:\n",
+    "As scoring set to f1, the GridSearchCV provides the best setup:\n",
     "\n",
     "     'randomforestclassifier__max_depth': 14,\n",
     " \n",
